<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/twin_celeb" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgMain"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.42"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.89"
            app:srcCompat="@drawable/img_main" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginTop="26sp"
            android:layout_marginEnd="40sp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_main"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgMain" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lyFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26sp"
            android:layout_marginEnd="32sp"
            android:background="@drawable/back_ly_female"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toTopOf="@id/btnFind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtMain"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.40">

            <TextView
                android:id="@+id/txtFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="13sp"
                android:paddingBottom="13sp"
                android:text="@string/female"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckedTextView
                android:id="@+id/chkFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6sp"
                android:background="@drawable/checkbox"
                android:checked="false"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lyMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginTop="26sp"
            android:background="@drawable/back_ly_male"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toTopOf="@id/btnFind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtMain"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.40">

            <TextView
                android:id="@+id/txtmale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="13sp"
                android:paddingBottom="13sp"
                android:text="@string/male"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckedTextView
                android:id="@+id/chkmale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6sp"
                android:background="@drawable/checkbox"
                android:checked="true"
                android:gravity="center"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginEnd="32sp"
            android:background="@drawable/back_btn_find"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/find"
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyMale" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLoading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.42"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.67" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>